staff process - collapse bug overflow

--- a/src/main/webapp/resources/static/center/staff/flowchart/block.css
+++ b/src/main/webapp/resources/static/center/staff/flowchart/block.css
@@ -77,6 +77,7 @@ canvas{
 
 .node_tools{
     margin-top: 10px;
+    display: inline-block;
 }
 .block_item_container{
     padding: 0 5px;
